tests/semantic/fail/break-4.tiger
for a := 0 to 0 do
	let
		function a () = break
	in
	end
